twitter gem added + bundle

--- a/app/views/layouts/bootstrap_layout.html.erb
+++ b/app/views/layouts/bootstrap_layout.html.erb
@@ -48,9 +48,9 @@
         <a class="navbar-brand" href="#">SocialTool</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <li><%= link_to "Link1", "#"  %></li>
+            <li><%= link_to "Link2", "#"  %></li>
+            <li><%= link_to "Link3", "#"  %></li>
 
           </ul>
 
@@ -65,7 +65,7 @@
               <% end %>
             </ul>
           </div>
-          
+
         </div>
       </div>
     </div>
