--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,13 +5,28 @@
 				<th>Provider</th>
 				<th> Name</th>
 				<th>Action</th>
+
 			</tr>
 			
 			<%= render :partial => "twitter_credentials", :collection => current_user.twitter_credentials, :as => :tw %>
 		</table>
 	<% end %>
-
+	<%= link_to "Add keywords", "#", class: "keyword"%>
 	<%= link_to "Add twitter account", "auth/twitter"%>
+	<div class="form">
+		<%= form_tag "users/keywords", remote: true do %>		
+			<%= text_field_tag "key" %>
+			<%= submit_tag "Submit"%>
+		<% end %>
+	</div>
 <%else%>
 	<p>Login first to move further!</p>
 <% end %>
+<script type="text/javascript">
+	$(document).ready(function(){
+		$(".form").hide();
+	});
+	$(".keyword").click(function(){
+		$(".form").show();
+	});
+</script>
