--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,7 @@
 		<h3>Keywords searched for </h3>
 		<%= current_user.keywords %>
 
-		<%= link_to "Refresh keywords", "tweets/get_tweets", remote: true %>
+		<%= link_to "Refresh Tweets", "tweets/get_tweets", remote: true %>
 
 		<h4>Tweets for the keywords</h4>
 	<% end %>
